# flight-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_READY.md  LICENSE  README.md  SECURITY.md  claude_desktop_config.example.json  mcp-config.json  package-lock.json  package.json  pyproject.toml  requirements.txt
flight_mcp_server/: __init__.py  amadeus_client.py  error_handler.py  server.py
src/: amadeusClient.js  errorHandler.js  index.js
tests/: demo.js  interactive-demo.js  test-amadeus.js  test-working.js  test.js
